# lasfera

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  00_START_HIER.md  BUG_FIX_SUMMARY.md  CHANGELOG.rst  CITATION.cff  DEEP_DIVE_ANALYSIS.md  DEVNOTES.rst  DHCRAFT_ANALYSIS.md  Dockerfile  EMAIL_AN_LAURA.md  EXEC_SUMMARY_IMPLEMENTATION.md  EXPORT_ANLEITUNG.md  KALKULATION_TEMPLATE.md  KNOWLEDGE_VAULT_REVIEW.md  KONKRETE_BUGS_GEFUNDEN.md  LA_SFERA_BUGS_AND_TASKS.md  Makefile  README.md  SESSION_SUMMARY.md  TESTING_BUG_FIXES.md  VERIFICATION_REPORT.md  docker-compose.yml  docker-compose.yml.j2  export_requirements.txt  export_to_yaml.py  make_library_fixture.py  package-lock.json  package.json  pyproject.toml  verify_fixes.py
.claude/: settings.local.json
.github/workflows/: build-and-publish.yml  cicd.yml
.knowledge/: EXECUTIVE_SUMMARY.md  README.md
.knowledge/01_project/: contacts.md
.knowledge/02_technical/: tech_stack.md
.knowledge/03_bugs/: bug_inventory.md
.knowledge/04_meetings/: 2025-11-03_preparation.md  demo_questions.md
.knowledge/05_deliverables/: cost_estimate.md
.knowledge/06_reference/: quick_reference.md
.knowledge/07_implementation/: claude_code_feasibility.md  immediate_action_plan.md
config/: settings.py  urls.py
docs/knowledge/: CHANGELOG.md  README.md
gallery/: models.py  urls.py  views.py
gallery/migrations/: 0001_initial.py
knowledge/: EXECUTIVE_SUMMARY.md  IMPLEMENTATION_EXECUTIVE_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  NEXT_STEPS_IMMEDIATE.md  PROJECT_DESCRIPTION_REVIEW.md  README.md  Task Analysis and Status Report.md  knowledge_vault_v2.md
knowledge/01_project/: overview.md
knowledge/02_technical/: repository_structure.md
lasfera/: manage.py  models.dbml
manuscript/: admin.py  models.py  resources.py  serializers.py  urls.py  utils.py  views.py
pages/: models.py  urls.py  views.py
static-mvp/: .eleventy.js  README.md  package-lock.json  package.json
templates/: base.html  index.html  manage_stanza_variations.html  manuscript_single.html  manuscripts.html  stanzas.html  toponym_single.html
textannotation/: apps.py  models.py  urls.py
(+205 files in other folders)
