[tool.poetry]
name = "lasfera-app"
version = "0.1.0"
description = ""
authors = ["Jason Heppler <jheppler@gmu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
django-allauth = "^0.61.1"
django-environ = "^0.11.2"
pylint-django = "^2.5.5"
pillow = "^10.2.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
